nginxlearn/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: learn
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo "<html><body><h1>You are hitting pod: ${POD_NAME}</h1></body></html>" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
      volumes:
        - name: html
          emptyDir: {}
